--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,6 +16,7 @@
     font-weight: bold;
     font-size: 35px;
     color: #181818;
+    
 }
 .section-description{
     font-size: 18px;
@@ -77,10 +78,10 @@ nav li a{
 .banner{
     display: flex;
     justify-content: space-between;
-    margin: 0 28px 0 230px;
+    margin: 0 35px 0 200px;
 }
 .banner-content{
-    width: 500px;
+    max-width: 580px;
     
 }
 .imges{
@@ -89,6 +90,7 @@ nav li a{
 .section-title{
     font-weight: 600;
     font-size: 45px;
+    margin-bottom: 0px;
 }
 .title{
     font-weight: bold;
@@ -117,3 +119,32 @@ main{
     display: flex;
     justify-content: space-around;
 }
+/* resume style */
+.resume-container{
+    display: flex;
+    gap: 24px;
+   
+}
+
+.center-section{
+    text-align: center;
+}
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 0px;
+}
+
+
+.experience-description, .experience-sub-title{
+    color: #757575;
+}
+.resume hr{
+    margin: 30px 5px;
+    
+}
+.btn-pr{
+    margin-top: 50px;
+    text-align: center;
+}
+
