--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 .header{
     background-image: url("../images/developer.png"), url("../images/header_bg.png");
     background-repeat: no-repeat;
@@ -171,4 +174,19 @@ footer input[type="text"], input[type="email"],input[type="textarea"]{
 .btn-submit{
     margin-top: 24px;
 }
-
+/* section skill style */
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-description{
+    padding: 30px;
+}
+.skill{
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+}
+.skills{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
