--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -179,12 +179,13 @@ footer input[type="text"], input[type="email"],input[type="textarea"]{
     display: flex;
     gap: 24px;
 }
-.skill-description{
-    padding: 30px;
+.skill{
+    
 }
 .skill{
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
+    padding: 30px;
 }
 .skills{
     margin-top: 130px;
